--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Elen - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Ismail Hossain</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -32,13 +32,14 @@
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
-			<h1 id="colorlib-logo"><a href="index.html">elen<span>.</span></a></h1>
+			<h1 id="colorlib-logo"><a href="index.html">Ismail<span>.</span></a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
-					<li><a href="photography.html">Photography</a></li>
-					<li><a href="travel.html">Travel</a></li>
-					<li><a href="fashion.html">Fashion</a></li>
+					<li><a href="fashion.html">Education</a></li>
+					<li><a href="travel.html">Programming skill</a></li>
+					<li><a href="photography.html">Professional Experience</a></li>
+					<li><a href="#">Research Experience</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
@@ -63,8 +64,8 @@
 						<div class="img mb-4" style="background-image: url(images/author.jpg);"></div>
 						<div class="desc">
 							<h2 class="subheading">Hello I'm</h2>
-							<h1 class="mb-4">Elen Henderson</h1>
-							<p class="mb-4">I am A Blogger Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<h1 class="mb-4">Ismail Hossain</h1>
+							<p class="mb-4">I am Software Engineer at Samsung R&D Institute, Bangladesh. I have been working at Samsung since 2019.</p>
 							<p><a href="#" class="btn-custom">More About Me <span class="ion-ios-arrow-forward"></span></a></p>
 						</div>
 					</div>
