--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 				<ul>
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
 					<li><a href="fashion.html">Education</a></li>
-					<li><a href="travel.html">Programming skill</a></li>
-					<li><a href="photography.html">Professional Experience</a></li>
-					<li><a href="#">Research Experience</a></li>
+					<li><a href="travel.html">Programming</a></li>
+					<li><a href="photography.html">Professional</a></li>
+					<li><a href="#">Research</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
@@ -57,11 +57,11 @@
 			</div>
 		</aside> <!-- END COLORLIB-ASIDE -->
 		<div id="colorlib-main">
-			<div class="hero-wrap js-fullheight" style="background-image: url(images/bg_1.jpg);" data-stellar-background-ratio="0.5">
+			<div class="hero-wrap js-fullheight" style="background-image: url(images/cover_pic.jpg);" data-stellar-background-ratio="0.5">
 				<div class="overlay"></div>
 				<div class="js-fullheight d-flex justify-content-center align-items-center">
 					<div class="col-md-8 text text-center">
-						<div class="img mb-4" style="background-image: url(images/author.jpg);"></div>
+						<div class="img mb-4" style="background-image: url(images/profile_pic.jpg);"></div>
 						<div class="desc">
 							<h2 class="subheading">Hello I'm</h2>
 							<h1 class="mb-4">Ismail Hossain</h1>
@@ -438,10 +438,10 @@
             <div class="ftco-footer-widget mb-4 ml-md-4">
               <h2 class="ftco-heading-2">Category</h2>
               <ul class="list-unstyled categories">
-                <li><a href="#">Photography <span>(6)</span></a></li>
-                <li><a href="#">Fashion <span>(8)</span></a></li>
-                <li><a href="#">Technology <span>(2)</span></a></li>
-                <li><a href="#">Travel <span>(2)</span></a></li>
+                <li><a href="#">Education <span>(6)</span></a></li>
+                <li><a href="#">Programming <span>(8)</span></a></li>
+                <li><a href="#">Profession <span>(2)</span></a></li>
+                <li><a href="#">Research <span>(2)</span></a></li>
               </ul>
             </div>
           </div>
@@ -462,9 +462,9 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">214/1, Road-02, Shapla Housing, West Agargaon, 60-Feet, Sher-e-Bangla Nagar, Dhaka-1207, California, Bangladesh</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+880-1521484475</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">ismailhossain.cuetcse13@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
