--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-      <meta name="author" content="Sai Puppala">
+      <meta name="author" content="Ismail Hossain">
       <META NAME="ROBOTS" CONTENT="INDEX, FOLLOW">
-      <meta property="og:title" content="About | Sai Puppala">
-      <title>Sai Puppala</title>
+      <meta property="og:title" content="About | Ismail Hossain">
+      <title>Ismail Hossain</title>
 
     <!-- Bootstrap 4 CSS. This is for the alpha 3 release of Bootstrap 4. This should be updated when Bootstrap 4 is officially released. -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -58,17 +58,17 @@
 			<div class="card">
 				<div class="card-header p-b-0">
 					<h5 class="card-title">
-					<img class="img-responsive" alt="Dr. Sajedul Talukder" src="images/profile.jpg" width="100%" />
+					<img class="img-responsive" alt="Ismail Hossain" src="images/profile-ismail.jpg" width="100%" />
 					</h5>
 				</div>
-				<h5 style="text-align: center;"><strong>Sai Puppala</strong></h5>
+				<h5 style="text-align: center;"><strong>Ismail Hossain</strong></h5>
 				<div class="card-text">
-					<b>Senior Data Engineer/Ph.D Student</b>
+					<b>Ph.D Student</b>
 					<br><b>Researcher</b>, <a href="https://www2.cs.siu.edu/~stalukder/supremelab/index.html"><b>S</b>ec<b>u</b>rity and <b>Pr</b>ivacy <b>E</b>nhanced <b>M</b>achine L<b>e</b>arning Lab</a>
                      <br>Engineering A0407, School of Computing
                      <br>Southern Illinois University
                      <br><i class="fa fa-phone" aria-hidden="true"></i> (618) 453-6059
-                     <br><i class="fa fa-envelope" aria-hidden="true"></i> <a href="https://www2.cs.siu.edu/~stalukder/mailto:saimaniteja.puppala@siu.edu">saimaniteja.puppala@siu.edu</a>
+                     <br><i class="fa fa-envelope" aria-hidden="true"></i> <a href="https://www2.cs.siu.edu/~stalukder/mailto:ismail.hossain@siu.edu">ismail.hossain@siu.edu</a>
 
 				</div>
 			</div>
@@ -98,7 +98,7 @@
 			<!-- Articles -->
 			<div class="row">
 				<div class="bio">
-            Currently, Sai Puppala is a Ph.D. student at SIU Carbondale and also part of the Data Science team for one of the leading corporate company. He earned his Masters degree in big data analytics from University of Illinois. His specialization includes Big data, Machine Learning, Parallel Processing and Cloud Services. In his past position, he worked as a data scientist, where he was part of some of the prestigious products like Google CP. In his experience with IT, he worked across different domains that include Financial services, Retail, Cloud services, Transportation and Manufacturing industries. Also, he is a certified solutions architect and data engineer. His fascination and curiosity towards big data and machine learning ignited a spark inside him to explore more beyond the horizon. He worked with different languages such as C, C++, Java, .Net, Python, Hive, Hadoop, Spark, NoSQL, SQL Server, Oracle, R, Impala, Hive, HBase, SAS, Tableau, Perl etc. Additionally, he has certifications in Big Data Analytics from Columbia, MIT, Harvard, Microsoft and IIT-Hyderabad. His research explores the interplay between big data, networking, security, and machine learning adaptability. Specifically, he aims to understand and resolve the tensions between big data and security with machine learning and deep learning strategies that govern its eventual real-world context.
+            Currently, Ismail Hossain is a Ph.D. student at SIU Carbondale. He earned his Masters degree in big data analytics from University of Illinois. His specialization includes Big data, Machine Learning, Parallel Processing and Cloud Services. In his past position, he worked as a data scientist, where he was part of some of the prestigious products like Google CP. In his experience with IT, he worked across different domains that include Financial services, Retail, Cloud services, Transportation and Manufacturing industries. Also, he is a certified solutions architect and data engineer. His fascination and curiosity towards big data and machine learning ignited a spark inside him to explore more beyond the horizon. He worked with different languages such as C, C++, Java, .Net, Python, Hive, Hadoop, Spark, NoSQL, SQL Server, Oracle, R, Impala, Hive, HBase, SAS, Tableau, Perl etc. Additionally, he has certifications in Big Data Analytics from Columbia, MIT, Harvard, Microsoft and IIT-Hyderabad. His research explores the interplay between big data, networking, security, and machine learning adaptability. Specifically, he aims to understand and resolve the tensions between big data and security with machine learning and deep learning strategies that govern its eventual real-world context.
             </div>
 			</div>
 			
