--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
    <head>
@@ -99,11 +98,34 @@
 			<div class="row">
 				<div class="bio">
 					Ismail Hossain is a Ph.D. student at the School of Computing at Southern Illinois University. He earned his B.Sc. in Computer Science and Engineering from Chittagong University of Engineering and Technology (CUET). In his last position, he worked as a senior software engineer at Samsung R&D Institute Bangladesh, where he was working on a large-scale project with Samsung Network Division to build web-based tools for 4G and 5G developers. He is an enthusiastic competitive programmer (Leetcode, Codeforces, Uva, LightOj, Spoj, Hackerrank) who regularly won prizes and received advanced level certificates in Samsung R&D’s monthly contests. He worked both on the front-end and back-end where his responsibilities included requirements analysis, design, and development of software modules, testing, and deployment to the server. In Samsung, he was actively doing knowledge-sharing activities like taking sessions on software engineering principles and new technologies, clean coding and best practices. Due to his outstanding performance, he was selected from a number of potential candidates at Samsung to be sent to Samsung Digital City in Suwon, Korea, to collaborate on the projects with the Suwon team. At Samsung, he was a member of the research group where he organized weekly presentations, sessions, and workshops on recent patents, innovations, and ideas.
-            			</div>
+            </div>
 			</div>
-			
 			<hr>      
 			<div class="row">
+				<h5>Education</h5>
+            <ul class="ul-dates">
+               <li>
+                  <div class="content">
+                     <b>Ph.D. in Computer Science</b><br><span class = "duration"></span>
+                     <div><i>(Fall 2022 - Current)</i>
+                     </div>
+                     <div><i>Souther Illinois University, Carbondale</i>
+                     </div>
+                  </div>
+               </li>
+               <li>
+                  <div class="content">
+                     <b>B.S. in Computer Science & Engineering</b><br><span class = "duration"></span>
+                     <div><i>(March 2014 - November 2018)</i>
+                     </div>
+                     <div><i>Chittagong University of Engineering & Technology</i>
+                     </div>
+                  </div>
+               </li>
+
+            </ul>
+			</div>
+         <div class="row">
 				<h5>Research Domain Interests</h5>
             <ul class="ul-dates">
                <li>
@@ -132,7 +154,7 @@
 
             </ul>
 			</div>
-						<hr>      
+			<hr>      
 			<div class="row">
 				<h5>Recent Achievements</h5>
             <ul class="ul-dates">
@@ -168,9 +190,9 @@ The CyberForce competition included a range of cybersecurity activities related 
 					</h5>
 				</div>
 				<div class="card-block">
-							<ul class="ul-card">
+					<ul class="ul-card">
                <li>
-                    <div class="description">
+                  <div class="description">
                      <div class="what"><b>Ph.D. in Computer Science</b></div>
                      <div class="where">Major: Artificial Intelligence</br> 
 										Minor: Security</br> 
@@ -212,7 +234,7 @@ The CyberForce competition included a range of cybersecurity activities related 
 		    <div class="small-print">
         	<div class="container">
         		<p><a href="https://www2.cs.siu.edu/~stalukder/#">Terms &amp; Conditions</a> | <a href="https://www2.cs.siu.edu/~stalukder/#">Privacy Policy</a> | <a href="https://www2.cs.siu.edu/~stalukder/#">Contact</a></p>
-        		<p>Copyright &copy; Sajedul Talukder 2021 </p>
+        		<p>Copyright &copy; Ismail Hossain 2023 </p>
         	</div>
         </div>
 	</footer>
