--- a/index.html
+++ b/index.html
@@ -179,10 +179,9 @@ The CyberForce competition included a range of cybersecurity activities related 
 
 
 	  <!-- Right Column -->
-	  <div class="col-sm-3">
-
+	  <!-- <div class="col-sm-3"> -->
 			<!-- Form --> 
-			<div class="card">
+			<!-- <div class="card">
 				<div class="card-header p-b-0">
 					<h5 class="card-title">
 						<i class="fa fa-bullhorn" aria-hidden="true"></i> 
@@ -222,12 +221,9 @@ The CyberForce competition included a range of cybersecurity activities related 
                </li>
             </ul>
 					</div>
-			</div>
- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"/>
-
-
-
-	  </div><!--/Right Column -->
+			</div> -->
+         <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"/> -->
+	  <!-- </div>/Right Column -->
 	</div><!--/container-fluid-->
 	
 	<footer>
