--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                      <b>B.S. in Computer Science & Engineering</b><br><span class = "duration"></span>
                      <div><i>(March 2014 - November 2018)</i>
                      </div>
-                     <div><i>Chittagong University of Engineering & Technology</i>
+                     <div><i>Chittagong University of Engineering & Technology (CUET)</i>
                      </div>
                   </div>
                </li>
@@ -164,7 +164,7 @@
 					 <p>The CyberSalukis placed 16th overall during the U.S. Department of Energy’s CyberForce Competition, held late in 2022. </p>
 					 <p>The DOE competition is aimed at building students’ critical infrastructure and cyber security nexus knowledge and awareness of hands-on cyber education. It also aims to increase fundamental understanding of cyber security within a real-world context.
 
-The CyberForce competition included a range of cybersecurity activities related to a renewable energy scenario revolving around a fictitious electric vehicle manufacturing plant and its solar power generation facility.</p>
+                  The CyberForce competition included a range of cybersecurity activities related to a renewable energy scenario revolving around a fictitious electric vehicle manufacturing plant and its solar power generation facility.</p>
 					 <p>More than 140 teams from 108 institutions across country participated in the competition. The SIU School of Computing team, CyberSalukis, finished 4th among the 12 participating teams from Illinois, while another SIU team, Security Dawgs, secured 41st place in the competition overall.</p>
                      <h5 class="card-title">
 					<img class="img-responsive" alt="Cyber Force Competition" src="images/cyberforce.png" width="80%" />
@@ -175,6 +175,87 @@ The CyberForce competition included a range of cybersecurity activities related 
 
             </ul>
 			</div>
+
+         <div class="row">
+				<h5>Professional Experience</h5>
+            <ul class="ul-dates">
+               <li>
+                  <div class="content">
+                     <b>Former Sr. Software Engineer</b><br><span class = "duration"></span>
+                     <div><i>February 2019 – August 2022</i>
+                     </div>
+                     <div><i>Samsung R&D Institute Bangladesh</i>
+                     </div>
+                     <div><i>Worked as a full stack web application developer at Software Engineering division of Samsung Network Lab.</i>
+                     </div>
+                     <div>
+                        <ul>
+                           <li>Development and testing of software modules</li>
+                           <li>Static analysis and process improvement</li>
+                           <li>Improvement and optimization of legacy software systems</li>
+                           <li>Remote collaboration with clients and mentoring new team members</li>
+                           <li>Business trip to Suwon, South Korea for new module release</li>
+                        </ul>
+                     </div>
+                  </div>
+               </li>
+            </ul>
+            <!-- <ul class="ul-dates">
+               <li>
+                  <div class="content">
+                  <p>Samsung R&D Institute Bangladesh</p>
+                  <p>Former Engineer | February 2019 – August 2022</p>
+                  <p>Worked as a full stack web application developer at Software Engineering division of Samsung Network Lab.</p>
+                  </div>
+               </li>
+            </ul> -->
+			</div>
+         <div class="row">
+				<h5>Programming Skill</h5>
+            <ul class="ul-dates">
+               <li>
+                  <div class="content">
+                     <b>Competitive Programmer</b><br><span class = "duration"></span>
+                     
+                     <div>
+                        <ul>
+                           <li>Solved 1000+ problems in different Online Judge (i.e. Leetcode, Codeforces, Uva, LightOj, SPOJ)</li>
+                           <li>Participation, ACM International Collegiate Programming Contest (ICPC), Dhaka Regional</li>
+                           <li>Participation, National and Divisional level Programming Contests</li>
+                           <li>Participation, Problem-solving and weekly practice contest, and monthly programming contests that are organized by Samsung.</li>
+                           <li>Business trip to Suwon, South Korea for new module release</li>
+                           <li>Capability of analyzing program time and memory complexity</li>
+                           <li>Expertise at Data Structure and Algorithm</li>
+                        </ul>
+                     </div>
+                  </div>
+               </li>
+            </ul>
+			</div>
+
+
+<!-- Professional Experience	
+
+Samsung R&D Institute Bangladesh
+Former Engineer | February 2019 – August 2022
+Worked as a full stack web application developer at Software Engineering division of Samsung Network Lab.
+
+•	Development and testing of software modules
+•	Static analysis and process improvement
+•	Improvement and optimization of legacy software systems
+•	Remote collaboration with clients and mentoring new team members
+•	Business trip to Suwon, South Korea for new module release -->
+
+<!-- Programming Skill	
+
+•	Solved 1000+ problems in different Online Judge (i.e. Leetcode, Codeforces, Uva, LightOj, SPOJ)
+•	Participation, ACM International Collegiate Programming Contest (ICPC), Dhaka Regional
+•	Participation, National and Divisional level Programming Contests
+•	Participation, Problem-solving and weekly practice contest, and monthly programming contests that are organized by Samsung.
+•	Capability of analyzing program time and memory complexity
+•	Knowledge on Data Structure and Algorithm -->
+
+
 		</div><!--/Center Column-->
 
 
