--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                <li class="nav-item" id="current"><a href="index.html"><span>Home</span></a></li>
                <li class="nav-item"><a href="publication.html"><span>Publications</span></a></li>
 			   <li class="nav-item"><a href=""><span>Media & Blogs</span></a></li>
-			   <li class="nav-item"><a href="https://scholar.google.com/citations?user=VjEGZJoAAAAJ&hl=en"><span>Google Scholar</span></a></li>
+			   <li class="nav-item"><a href="https://scholar.google.com/citations?user=FexryyIAAAAJ&hl=en"><span>Google Scholar</span></a></li>
                <li class="nav-item"><a href="https://www2.cs.siu.edu/~stalukder/supremelab/index.html"><span>SUPREME Lab</span></a></li>
             </ul>
 
@@ -68,6 +68,7 @@
                      <br>Southern Illinois University
                      <br><i class="fa fa-phone" aria-hidden="true"></i> (618) 453-6059
                      <br><i class="fa fa-envelope" aria-hidden="true"></i> <a href="https://www2.cs.siu.edu/~stalukder/mailto:ismail.hossain@siu.edu">ismail.hossain@siu.edu</a>
+		     <br><i class="fa fa-envelope" aria-hidden="true"></i> <a href="https://www.researchgate.net/profile/Ismail-Hossain-50">ResearchGate</a>
 
 				</div>
 			</div>
