--- a/index.html
+++ b/index.html
@@ -98,8 +98,22 @@
 			<!-- Articles -->
 			<div class="row">
 				<div class="bio">
-					Ismail Hossain is a Ph.D. student at the School of Computing at Southern Illinois University. He earned his B.Sc. in Computer Science and Engineering from Chittagong University of Engineering and Technology (CUET). In his last position, he worked as a senior software engineer at Samsung R&D Institute Bangladesh, where he was working on a large-scale project with Samsung Network Division to build web-based tools for 4G and 5G developers. He is an enthusiastic competitive programmer (Leetcode, Codeforces, Uva, LightOj, Spoj, Hackerrank) who regularly won prizes and received advanced level certificates in Samsung R&D’s monthly contests. He worked both on the front-end and back-end where his responsibilities included requirements analysis, design, and development of software modules, testing, and deployment to the server. In Samsung, he was actively doing knowledge-sharing activities like taking sessions on software engineering principles and new technologies, clean coding and best practices. Due to his outstanding performance, he was selected from a number of potential candidates at Samsung to be sent to Samsung Digital City in Suwon, Korea, to collaborate on the projects with the Suwon team. At Samsung, he was a member of the research group where he organized weekly presentations, sessions, and workshops on recent patents, innovations, and ideas.
-            </div>
+					I am enrolled in a Ph.D. program at the School of Computing in Southern Illinois University. 
+					My educational background includes a B.Sc. degree in Computer Science and Engineering from Chittagong University of Engineering and Technology (CUET). 
+					I have been working as a researcher at the SUPREME Lab since Fall'22, working under the guidance of Professor Dr. Sajedul Talukder. 
+					My primary research focus revolves around areas such as Federated Learning, Machine Learning, Deep Learning, Natural Language Processing (NLP), 
+					and Social Networks. Previously, I worked as a senior software engineer at Samsung R&D Institute Bangladesh, 
+					where I made valuable contributions to a collaborative project with Samsung Network Division. Specifically, 
+					I focused on the development of web-based tools catering to the needs of 4G and 5G developers. Alongside my professional endeavors, 
+					I have actively participated in competitive programming on platforms such as Leetcode, Codeforces, Uva, LightOj, Spoj, and Hackerrank, 
+					achieving noteworthy success. Throughout my tenure at Samsung, I consistently demonstrated exceptional performance by securing prizes 
+					and earning advanced level certificates in the monthly contests organized by Samsung R&D. My technical expertise encompasses both 
+					front-end and back-end development, with responsibilities ranging from requirements analysis to software module design, development, 
+					testing, and server deployment. Moreover, I actively engaged in knowledge-sharing activities during my time at Samsung, conducting 
+					sessions on topics such as software engineering principles, emerging technologies, and best practices for clean coding. My performance 
+					at Samsung led to my selection as a distinguished candidate among many others at Samsung, resulting in an opportunity to collaborate 
+					with the Suwon team on diverse projects at Samsung Digital City in Suwon, Korea.	
+            			</div>
 			</div>
 			<hr>      
 			<div class="row">
