--- a/index.html
+++ b/index.html
@@ -69,8 +69,17 @@
                      <br><i class="fa fa-phone" aria-hidden="true"></i> (618) 453-6059
                      <br><i class="fa fa-envelope" aria-hidden="true"></i> <a href="https://www2.cs.siu.edu/~stalukder/mailto:ismail.hossain@siu.edu">ismail.hossain@siu.edu</a>
 		     <br><i class="fa fa-envelope" aria-hidden="true"></i> <a href="https://www.researchgate.net/profile/Ismail-Hossain-50">ResearchGate</a>
-
-				</div>
+			</div>
+			<br>
+			<ul style="list-style-type: none">
+				<li><a href="https://scholar.google.com/citations?user=FexryyIAAAAJ&hl=en"><i class="fas fa-fw fa-graduation-cap"></i> Google Scholar</a></li>
+				<li><a href="#"><i class="fab fa-fw fa-orcid"></i> ORCID</a></li>
+				<li><a href="#"><i class="fab fa-fw fa-github" aria-hidden="true"></i> Github</a></li>
+				<li><a href="https://www.researchgate.net/profile/Ismail-Hossain-50"><i class="fab fa-fw fa-researchgate" aria-hidden="true"></i> ResearchGate</a></li>
+<!-- 				<li><a href="https://dblp.org/pid/203/0239.html"><i class="fas fa-fw fa-graduation-cap"></i> DBLP</a></li> -->
+				<li><a href="https://twitter.com/IsmailHMukul"><i class="fab fa-fw fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
+				<li><a href="https://www.linkedin.com/in/ismail-hossain-90771716a/"><i class="fab fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a></li>
+			</ul>
 			</div>
 
 			<!-- Text Panel -->
