--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <ul class="nav navbar-nav">
                <li class="nav-item" id="current"><a href="index.html"><span>Home</span></a></li>
                <li class="nav-item"><a href="publication.html"><span>Publications</span></a></li>
-			   <li class="nav-item"><a href=""><span>Media & Blogs</span></a></li>
-			   <li class="nav-item"><a href="https://scholar.google.com/citations?user=FexryyIAAAAJ&hl=en"><span>Google Scholar</span></a></li>
-               <li class="nav-item"><a href="https://www2.cs.siu.edu/~stalukder/supremelab/index.html"><span>SUPREME Lab</span></a></li>
+<!-- 			   <li class="nav-item"><a href=""><span>Media & Blogs</span></a></li> -->
+<!-- 			   <li class="nav-item"><a href="https://scholar.google.com/citations?user=FexryyIAAAAJ&hl=en"><span>Google Scholar</span></a></li> -->
+               <li class="nav-item"><a href="https://www2.cs.siu.edu/~stalukder/supremelab/index.html"><span>Research Lab</span></a></li>
             </ul>
 
             </ul>
@@ -68,7 +68,6 @@
                      <br>Southern Illinois University
                      <br><i class="fa fa-phone" aria-hidden="true"></i> (618) 453-6059
                      <br><i class="fa fa-envelope" aria-hidden="true"></i> <a href="https://www2.cs.siu.edu/~stalukder/mailto:ismail.hossain@siu.edu">ismail.hossain@siu.edu</a>
-		     <br><i class="fa fa-envelope" aria-hidden="true"></i> <a href="https://www.researchgate.net/profile/Ismail-Hossain-50">ResearchGate</a>
 			</div>
 			<br>
 			<ul style="list-style-type: none">
@@ -109,7 +108,7 @@
 				<div class="bio">
 					I am enrolled in a Ph.D. program at the School of Computing in Southern Illinois University. 
 					My educational background includes a B.Sc. degree in Computer Science and Engineering from Chittagong University of Engineering and Technology (CUET). 
-					I have been working as a researcher at the SUPREME Lab since Fall'22, working under the guidance of Professor Dr. Sajedul Talukder. 
+					I have been working as a researcher at the SUPREME Lab since Fall'22 under the guidance of Professor Dr. Sajedul Talukder. 
 					My primary research focus revolves around areas such as Federated Learning, Machine Learning, Deep Learning, Natural Language Processing (NLP), 
 					and Social Networks. Previously, I worked as a senior software engineer at Samsung R&D Institute Bangladesh, 
 					where I made valuable contributions to a collaborative project with Samsung Network Division. Specifically, 
