--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ Worked as a full stack web application developer at Software Engineering divisio
 	<footer>
 		    <div class="small-print">
         	<div class="container">
-        		<p><a href="https://www2.cs.siu.edu/~stalukder/#">Terms &amp; Conditions</a> | <a href="https://www2.cs.siu.edu/~stalukder/#">Privacy Policy</a> | <a href="https://www2.cs.siu.edu/~stalukder/#">Contact</a></p>
+        		<p><a href="#">Terms &amp; Conditions</a> | <a href="#">Privacy Policy</a> | <a href="#">Contact</a></p>
         		<p>Copyright &copy; Ismail Hossain 2023 </p>
         	</div>
         </div>
