--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <ul class="ul-dates">
                <li>
                   <div class="content">
-                     <b>Former Sr. Software Engineer</b><br><span class = "duration"></span>
+                     <b>Sr. Software Engineer</b><br><span class = "duration"></span>
                      <div><i>February 2019 – August 2022</i>
                      </div>
                      <div><i>Samsung R&D Institute Bangladesh</i>
@@ -223,16 +223,8 @@
                   </div>
                </li>
             </ul>
-            <!-- <ul class="ul-dates">
-               <li>
-                  <div class="content">
-                  <p>Samsung R&D Institute Bangladesh</p>
-                  <p>Former Engineer | February 2019 – August 2022</p>
-                  <p>Worked as a full stack web application developer at Software Engineering division of Samsung Network Lab.</p>
-                  </div>
-               </li>
-            </ul> -->
-			</div>
+
+	</div>
          <div class="row">
 				<h5>Programming Skill</h5>
             <ul class="ul-dates">
@@ -242,10 +234,10 @@
                      
                      <div>
                         <ul>
-                           <li>Solved 1000+ problems in different Online Judge (i.e. Leetcode, Codeforces, Uva, LightOj, SPOJ)</li>
-                           <li>Participation, ACM International Collegiate Programming Contest (ICPC), Dhaka Regional</li>
+                           <li>Solved 1000+ problems in different Online Judge (i.e. Leetcode, Codeforces, Uva, LightOj, SPOJ, HackerRank)</li>
+                           <li>Participation, ACM International Collegiate Programming Contest (ICPC), Dhaka Regional, 2018</li>
                            <li>Participation, National and Divisional level Programming Contests</li>
-                           <li>Participation, Problem-solving and weekly practice contest, and monthly programming contests that are organized by Samsung.</li>
+                           <li>Participation, Problem-solving and weekly practice contests, and monthly programming contests that are organized by Samsung.</li>
                            <li>Business trip to Suwon, South Korea for new module release</li>
                            <li>Capability of analyzing program time and memory complexity</li>
                            <li>Expertise at Data Structure and Algorithm</li>
@@ -255,28 +247,6 @@
                </li>
             </ul>
 			</div>
-
-
-<!-- Professional Experience	
-
-Samsung R&D Institute Bangladesh
-Former Engineer | February 2019 – August 2022
-Worked as a full stack web application developer at Software Engineering division of Samsung Network Lab.
-
-•	Development and testing of software modules
-•	Static analysis and process improvement
-•	Improvement and optimization of legacy software systems
-•	Remote collaboration with clients and mentoring new team members
-•	Business trip to Suwon, South Korea for new module release -->
-
-<!-- Programming Skill	
-
-•	Solved 1000+ problems in different Online Judge (i.e. Leetcode, Codeforces, Uva, LightOj, SPOJ)
-•	Participation, ACM International Collegiate Programming Contest (ICPC), Dhaka Regional
-•	Participation, National and Divisional level Programming Contests
-•	Participation, Problem-solving and weekly practice contest, and monthly programming contests that are organized by Samsung.
-•	Capability of analyzing program time and memory complexity
-•	Knowledge on Data Structure and Algorithm -->
 
 
 		</div><!--/Center Column-->
