--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
          </ul>
       </div>
    </nav> -->
-   <nav class="navbar navbar-expand-lg" , style="background: rgb(138, 8, 8);">
+   <nav class="navbar navbar-expand-lg navbar-default navbar-fixed-top" , style="background: rgb(138, 8, 8);">
       <div class="container-fluid">
          <!-- <a class="navbar-brand" href="#">SIU</a> -->
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -219,10 +219,39 @@
                      </div>
                   </div>
                </li>
-
             </ul>
             <hr>
-
+            <h5>Work in Progress</h5>
+            <div class="card-group">
+               <div class="card">
+                 <img class="card-img-top" src="images\System-Architecture-new.png" alt="Card image cap">
+                 <div class="card-body">
+                   <!-- <h5 class="card-title">Card title</h5> -->
+                   <p class="card-text">System flow architecture starting at data
+                     acquisitions from different sources to the machine learning
+                     model tuning and different algorithms.</p>
+                   <p class="card-text"><small class="text-muted">Last updated 1 month ago</small></p>
+                 </div>
+               </div>
+               <div class="card">
+                 <img class="card-img-top" src="images\reply-tree.png" alt="Card image cap">
+                 <div class="card-body">
+                   <!-- <h5 class="card-title">Card title</h5> -->
+                   <p class="card-text">Comment threads for user post scores aggregation
+                     sample representation using different approaches.</p>
+                   <p class="card-text"><small class="text-muted">Last updated 1 month ago</small></p>
+                 </div>
+               </div>
+               <div class="card">
+                 <img class="card-img-top" src="images\zpk-proving-verifing-new.png" alt="Card image cap">
+                 <div class="card-body">
+                   <!-- <h5 class="card-title">Card title</h5> -->
+                   <p class="card-text">ZKP Proof Generation and Verification Phase.</p>
+                   <p class="card-text"><small class="text-muted">Last updated 1 month ago</small></p>
+                 </div>
+               </div>
+             </div>
+             <hr>
             <h5>Professional Experience</h5>
             <ul class="ul-dates">
                <li>
@@ -347,54 +376,5 @@
       </div>
    </footer>
 
-
-   <!-- Bootstrap core JavaScript
-    ================================================== -->
-   <!-- Placed at the end of the document so the pages load faster -->
-
-   <!-- jQuery library -->
-   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script> -->
-
-   <!-- Tether -->
-   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script> -->
-
-   <!-- Bootstrap 4 JavaScript. This is for the alpha 3 release of Bootstrap 4. This should be updated when Bootstrap 4 is officially released. -->
-   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/js/bootstrap.min.js" integrity="sha384-ux8v3A6CPtOTqOzMKiuo3d/DomGaaClxFYdCu2HPMBEkf6x2xiDyJ7gkXU0MWwaD" crossorigin="anonymous"></script> -->
-
-   <!-- Initialize Bootstrap functionality -->
-   <!-- <script> -->
-   // Initialize tooltip component
-   // $(function () {
-   // $('[data-toggle="tooltip"]').tooltip()
-   // })
-
-   // Initialize popover component
-   // $(function () {
-   // $('[data-toggle="popover"]').popover()
-   // })
-   // </script>
-
-   <!-- Placeholder Images -->
-   <!-- <script src="js/holder.min.js"></script>
-	
-	<script>
-function myFunction() {
-  var dots = document.getElementById("dots");
-  var moreText = document.getElementById("more");
-  var btnText = document.getElementById("myBtn");
-
-  if (dots.style.display === "none") {
-    dots.style.display = "inline";
-    btnText.innerHTML = "See more"; 
-    moreText.style.display = "none";
-  } else {
-    dots.style.display = "none";
-    btnText.innerHTML = "See less"; 
-    moreText.style.display = "inline";
-  }
-} -->
-   <!-- </script> -->
-
 </body>
-
 </html>
