--- a/blog.html
+++ b/blog.html
@@ -16,16 +16,27 @@
   <title>Blog | Ismail Hossain</title>
 
   <!-- Bootstrap 4 CSS. This is for the alpha 3 release of Bootstrap 4. This should be updated when Bootstrap 4 is officially released. -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <!-- Custom CSS: You can use this stylesheet to override any Bootstrap styles and/or apply your own styles -->
-  <link href="css/custom.css" rel="stylesheet">
+   <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
 
-  <!-- For icons -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
-  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+   <!-- Custom CSS: You can use this stylesheet to override any Bootstrap styles and/or apply your own styles -->
+   <!-- <link href="css/custom.css" rel="stylesheet"> -->
+
+   <!-- For icons -->
+
+
+   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+
+   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <style type="text/css">
     pre { line-height: 125%; }
@@ -7509,83 +7520,78 @@ a.anchor-link {
 </style>
 <!-- End of mermaid configuration --></head>
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
-  <nav class="navbar navbar-expand-lg" , style="background: rgb(138, 8, 8);">
-    <div class="container-fluid">
-      <!-- <a class="navbar-brand" href="#">SIU</a> -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
+   <nav class="navbar sticky-top navbar-expand-md navbar-dark"  style="background: rgb(138, 8, 8);">
       <a class="navbar-brand" href="#"><span>
-            <img src="images/logo.png" /></span>
-      </a>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active text-color" aria-current="page" href="index.html">Home</a>
+         <img src="images/logo.png" /></span></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+         <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
+         </li>
+         <li class="nav-item">
             <a class="nav-link text-color" href="publication.html">Publications</a>
-            <a class="nav-link text-color" href="https://www2.cs.siu.edu/~stalukder/supremelab/index.html">Research
-                Lab</a>
-            <a class="nav-link text-color" href="blog.html">Blog</a>
-          </div>
-      </div>
-    </div>
-  </nav>
+         </li>
+         <li class="nav-item">
+            <a class="nav-link text-color" href="https://www2.cs.siu.edu/~stalukder/supremelab/index.html">Research Lab</a>
+         </li>
+         <li><a class="nav-link text-color" href="blog.html">Blog</a></li>
+      </ul>
+      </div>  
+   </nav>
+   <br>
 
   <div class="container-fluid">
     <div class="row">
-      <div class="col-2">
-        <!-- List-Group Panel -->
-        <div class="card">
-          <div class="card-header p-b-0">
-              <h5 class="card-title">
-                <img class="img-responsive" alt="Ismail Hossain" src="images/profile-ismail.jpg" width="100%" />
-              </h5>
-          </div>
-          <h5 style="text-align: center;"><strong>Ismail Hossain</strong></h5>
-          <div class="card-text">
-              <b>Ph.D Student</b>
-              <br><b>Researcher Assistant</b>, <a
-                href="https://www2.cs.siu.edu/~stalukder/supremelab/index.html"><b>S</b>ec<b>u</b>rity and
-                <b>Pr</b>ivacy <b>E</b>nhanced <b>M</b>achine L<b>e</b>arning (Supreme) Lab</a>
-              <br>Engineering A321, School of Computing
-              <br>Southern Illinois University
-              <br><i class="fa fa-phone" aria-hidden="true"></i> (773) 355-9699
-              <br><i class="fa fa-envelope" aria-hidden="true"></i> <a
-                href="https://www2.cs.siu.edu/~stalukder/mailto:ismail.hossain@siu.edu">ismail.hossain@siu.edu</a>
-              <br><i class="fa fa-file" aria-hidden="true"></i> <a
-                href="CV_Ismail_Hossain.pdf">Curriculum Vitae</a>
-          </div>
-          <!-- <br> -->
-          <div class="row">
-              <div class="col-sm-12 text-center">
-                <a href="https://scholar.google.com/citations?user=FexryyIAAAAJ&hl=en"><i
-                    class="fa fa-graduation-cap"></i></a>
-                <!--<li><a href="#"><i class="fab fa-fw fa-orcid"></i> ORCID</a></li>-->
-                <a class="icons-row" href="https://github.com/ismail102"><i class="bi bi-github"></i></a>
-                <a class="icons-row" href="https://www.researchgate.net/profile/Ismail-Hossain-50"><i class="fa fa-researchgate" aria-hidden="true"></i></a>
-                <!--<li><a href="https://dblp.org/pid/203/0239.html"><i class="fas fa-fw fa-graduation-cap"></i> DBLP</a></li> -->
-                <!--<li><a href="https://twitter.com/IsmailHMukul"><i class="fab fa-fw fa-twitter-square"
-                            aria-hidden="true"></i> Twitter</a></li>-->
-                <a class="icons-row" href="https://www.linkedin.com/in/ismail-hossain-90771716a/"><i class="bi bi-linkedin"></i></a>
+              <!-- Left Column -->
+         <div class="col-md-3 col-xs-5">
+
+            <div class="card">
+               <img src="images/profile-ismail.jpg" class="card-img-top" alt="...">
+               <div class="card-body">
+                 <h5 class="card-title" style="text-align: center;">Ismail Hossain</h5>
+                 <div class="card-text" style="text-align: center;">
+                     <b>Ph.D Student</b>
+                     <br><b>Researcher Assistant</b>, <a
+                        href="https://www2.cs.siu.edu/~stalukder/supremelab/index.html"><b>S</b>ec<b>u</b>rity and
+                        <b>Pr</b>ivacy <b>E</b>nhanced <b>M</b>achine L<b>e</b>arning (SUPREME) Lab</a>
+                     <br>Engineering A321, School of Computing
+                     <br>Southern Illinois University
+                     <br><i class="fa fa-phone" aria-hidden="true"></i> (773) 355-9699
+                     <br><i class="fa fa-envelope" aria-hidden="true"></i> <a
+                        href="https://www2.cs.siu.edu/~stalukder/mailto:ismail.hossain@siu.edu">ismail.hossain@siu.edu</a>
+                     <br><i class="fa fa-file" aria-hidden="true"></i> <a
+                        href="CV_Ismail_Hossain.pdf">Curriculum Vitae</a>
+                  </div>
+               </div>
+               <div class="row">
+                  <div class="col-sm-12 text-center">
+                     <a href="https://scholar.google.com/citations?user=FexryyIAAAAJ&hl=en"><i
+                        class="fa fa-graduation-cap"></i></a>
+                     <!--<li><a href="#"><i class="fab fa-fw fa-orcid"></i> ORCID</a></li>-->
+                     <a class="icons-row" href="https://github.com/ismail102"><i class="bi bi-github"></i></a>
+                     <a class="icons-row" href="https://www.researchgate.net/profile/Ismail-Hossain-50"><i class="fa fa-researchgate" aria-hidden="true"></i></a>
+                     <!--<li><a href="https://dblp.org/pid/203/0239.html"><i class="fas fa-fw fa-graduation-cap"></i> DBLP</a></li> -->
+                     <!--<li><a href="https://twitter.com/IsmailHMukul"><i class="fab fa-fw fa-twitter-square"
+                                 aria-hidden="true"></i> Twitter</a></li>-->
+                     <a class="icons-row" href="https://www.linkedin.com/in/ismail-hossain-90771716a/"><i class="bi bi-linkedin"></i></a>
+                   </div>
               </div>
-          </div>
-          
-        </div>
+            </div>
+            <br />
+            <div class="card border-success mb-3">
+               <div class="card-header"><h5 class="card-title"><i class="fa fa-cog" aria-hidden="true"></i> Witty Quote</h5></div>
+               <div class="card-body text-success">
+                 <p class="card-text">“By far, the greatest danger of Artificial Intelligence is that people conclude
+                  too early that they understand it." – Eliezer Yudkowsky</p>
+               </div>
+             </div>
 
-        <!-- Text Panel -->
-        <div class="card">
-          <div class="card-header p-b-0">
-              <h5 class="card-title"><i class="fa fa-cog" aria-hidden="true"></i> Witty Quote</h5>
-          </div>
+         </div>
 
-          <div class="card-block">
-              <p class="card-text">“By far, the greatest danger of Artificial Intelligence is that people conclude
-                too early that they understand it." – Eliezer Yudkowsky</p>
-          </div>
-        </div>
-
-      </div><!--/Left Column-->
-      <div class="col-6">
+      <div class="col-md-6 col-xs-5">
          <main>
     <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
       <div class="jp-Cell-inputWrapper" tabindex="0">
@@ -7822,6 +7828,15 @@ a.anchor-link {
     </div>
   </main>
       </div>
+      <div class="col-md-3 col-xs-5">
+            <h5>Contents</h5>
+            <ul>
+              <li>ML Fundamental</li>
+              <li>Deep Learning</li>
+              <li>Federated Learning</li>
+              <li>Useful URLs</li>
+            </ul>
+         </div>
     </div>
   </div>
 </body>
