--- a/blog.html
+++ b/blog.html
@@ -7529,7 +7529,7 @@ a.anchor-link {
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
          <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
          </li>
          <li class="nav-item">
             <a class="nav-link text-color" href="publication.html">Publications</a>
