references is linked up

--- a/blog.html
+++ b/blog.html
@@ -7834,7 +7834,7 @@ a.anchor-link {
               <li>ML Fundamental</li>
               <li>Deep Learning</li>
               <li>Federated Learning</li>
-              <li>Useful URLs</li>
+              <li><a href="references.html">Useful URLs</a></li>
             </ul>
          </div>
     </div>
