Change Gallary to Gallery

--- a/gallery.html
+++ b/gallery.html
@@ -81,7 +81,7 @@
                     <a class="nav-link text-color" href="about.html">About</a>
                 </li>
                 <li><a class="nav-link text-color" href="blog.html">Blog</a></li>
-                <li><a class="nav-link text-color" href="gallary.html">Gallary</a></li>
+                <li><a class="nav-link text-color" href="gallery.html">Gallery</a></li>
             </ul>
         </div>
         </div>
