--- a/publication.html
+++ b/publication.html
@@ -89,7 +89,7 @@
              <a class="nav-link text-color" href="about.html">About</a>
           </li>
           <li><a class="nav-link text-color" href="blog.html">Blog</a></li>
-          <li><a class="nav-link text-color" href="gallary.html">Gallary</a></li>
+          <li><a class="nav-link text-color" href="gallery.html">Gallery</a></li>
        </ul>
     </div>
  </nav>
@@ -367,7 +367,7 @@
             </div>
             <!-- <br/>
             <div class="card card-publication">
-              <img class="card-img-top" style="width: 20%;" src="images/gallary-icon.png" alt="Card image cap">
+              <img class="card-img-top" style="width: 20%;" src="images/gallery-icon.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">A Novel Hierarchical Federated
                   Learning with Self-Regulated Decentralized Clustering</h5>
@@ -403,7 +403,7 @@
             </div> -->
             <br/>
             <div class="card card-publication">
-              <img class="card-img-top" style="width: 20%;" src="images/gallary-icon.png" alt="Card image cap">
+              <img class="card-img-top" style="width: 20%;" src="images/gallery-icon.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">An Evolutionary Population
                   Census Application Through Mobile Crowdsourcing</h5>
