--- a/blog.html
+++ b/blog.html
@@ -7701,7 +7701,7 @@ all of MD as it is not optimized for dense, information rich UIs.
           <a class="nav-link text-color" href="about.html">About</a>
         </li>
         <li><a class="nav-link text-color" href="blog.html">Blog</a></li>
-        <li><a class="nav-link text-color" href="gallary.html">Gallary</a></li>
+        <li><a class="nav-link text-color" href="gallery.html">Gallery</a></li>
       </ul>
     </div>
   </nav>
