--- a/index.html
+++ b/index.html
@@ -144,9 +144,21 @@
 
          <!-- Center Column -->
          <div class="col-md-6 col-xs-5">
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div id="carouselExampleControls" class="carousel slide border border-secondary" data-ride="carousel">
                <div class="carousel-inner">
                   <div class="carousel-item active">
+                     <img class="d-block w-100 slider-img" src="images/figures/13.svg" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                     <img class="d-block w-100 slider-img" src="images/figures/14.svg" alt="Third slide">
+                  </div>
+                  <div class="carousel-item">
+                     <img class="d-block w-100 slider-img" src="images/figures/15.svg" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                     <img class="d-block w-100 slider-img" src="images/figures/16.png" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
                      <img class="d-block w-100 slider-img" src="images/figures/1.svg" alt="First slide">
                   </div>
                   <div class="carousel-item">
@@ -197,6 +209,20 @@
             <ul class="ul-dates">
                <li>
                   <div class="content">
+                     <b>Social Networks</b><br><span class="duration"></span>
+                     <div><i>"AI and machine learning can significantly enhance the user experience within social
+                           networks.
+                           Given our daily reliance on various social platforms, user-generated posts, comments, and
+                           reactions
+                           serve as valuable resources for research purposes. Investigating social networks can lead to
+                           innovative
+                           insights into user data security and privacy, ultimately delivering novel user
+                           experiences."</i>
+                     </div>
+                  </div>
+               </li>
+               <li>
+                  <div class="content">
                      <b>Health Care</b><br><span class="duration"></span>
                      <div><i>"AI has the ability to analyze big data sets – pulling together patient insights and
                            leading to predictive analysis. Quickly obtaining patient insights helps the healthcare
@@ -213,20 +239,6 @@
                            cluster them, it will then detect deviations or security incidents from the norm before
                            responding to them. These patterns can help to improve security in the future. Similar
                            potential threats can be detected and blocked early enough."</i>
-                     </div>
-                  </div>
-               </li>
-               <li>
-                  <div class="content">
-                     <b>Social Networks</b><br><span class="duration"></span>
-                     <div><i>"AI and machine learning can significantly enhance the user experience within social
-                           networks.
-                           Given our daily reliance on various social platforms, user-generated posts, comments, and
-                           reactions
-                           serve as valuable resources for research purposes. Investigating social networks can lead to
-                           innovative
-                           insights into user data security and privacy, ultimately delivering novel user
-                           experiences."</i>
                      </div>
                   </div>
                </li>
